mise en place de la bibliothèque jdom2 pour lire les fichiers xml

--- a/src/vue/sample.fxml
+++ b/src/vue/sample.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.layout.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controle.Controller">
-   <children>
-      <TilePane prefHeight="600.0" prefWidth="800.0" />
-      <Pane prefHeight="600.0" prefWidth="800.0" />
-   </children>
-</StackPane>
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controle.Controller">
+   <center>
+      <Pane fx:id="fond" prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <TilePane fx:id="decor" prefHeight="400.0" prefWidth="600.0" />
+         </children>
+      </Pane>
+   </center>
+</BorderPane>
