--- a/src/vue/sample.fxml
+++ b/src/vue/sample.fxml
@@ -4,10 +4,10 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controle.Controller">
    <center>
-      <Pane fx:id="fond" prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <StackPane fx:id="fond" prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <TilePane fx:id="decor" prefHeight="400.0" prefWidth="600.0" />
+
          </children>
-      </Pane>
+      </StackPane>
    </center>
 </BorderPane>
