--- a/src/vue/sample.fxml
+++ b/src/vue/sample.fxml
@@ -4,9 +4,9 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controle.Controller">
    <center>
-      <StackPane fx:id="fond" prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <StackPane fx:id="fond"  onKeyPressed="#deplacement" prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-
+            <Pane fx:id="pane" focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="320.0" />
          </children>
       </StackPane>
    </center>
